@@ -3,15 +3,16 @@ package de.tum.cit.aet.artemis.assessment.repository;
 import static de.tum.cit.aet.artemis.core.config.Constants.PROFILE_CORE;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
 import org.springframework.context.annotation.Lazy;
 import org.springframework.context.annotation.Profile;
+import org.springframework.data.jpa.repository.Modifying;
 import org.springframework.data.jpa.repository.Query;
 import org.springframework.data.repository.query.Param;
 import org.springframework.stereotype.Repository;
+import org.springframework.transaction.annotation.Transactional;
 
 import de.tum.cit.aet.artemis.assessment.domain.Feedback;
 import de.tum.cit.aet.artemis.assessment.domain.GradingCriterion;
@@ -28,6 +29,10 @@ import de.tum.cit.aet.artemis.core.repository.base.ArtemisJpaRepository;
 public interface FeedbackRepository extends ArtemisJpaRepository<Feedback, Long> {
 
     List<Feedback> findByResult(Result result);
+
+    @Modifying
+    @Transactional // ok because of delete
+    void deleteByResult_Id(long resultId);
 
     @Query("""
             SELECT feedback
@@ -72,7 +77,7 @@ public interface FeedbackRepository extends ArtemisJpaRepository<Feedback, Long>
      */
     default List<Feedback> findFeedbackByExerciseGradingCriteria(Set<GradingCriterion> gradingCriteria) {
         if (gradingCriteria.isEmpty()) {
-            return Collections.emptyList();
+            return List.of();
         }
         List<Long> gradingInstructionsIds = gradingCriteria.stream().flatMap(gradingCriterion -> gradingCriterion.getStructuredGradingInstructions().stream())
                 .map(GradingInstruction::getId).toList();
