@@ -3,7 +3,7 @@ package de.tum.cit.aet.artemis.core.security.jwt;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.mock;
 
-import java.util.Collections;
+import java.util.List;
 
 import jakarta.servlet.http.Cookie;
 
@@ -19,13 +19,13 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.test.util.ReflectionTestUtils;
 
+import de.tum.cit.aet.artemis.core.config.ArtemisProperties;
 import de.tum.cit.aet.artemis.core.config.Constants;
 import de.tum.cit.aet.artemis.core.management.SecurityMetersService;
 import de.tum.cit.aet.artemis.core.security.Role;
 import io.jsonwebtoken.io.Decoders;
 import io.jsonwebtoken.security.Keys;
 import io.micrometer.core.instrument.simple.SimpleMeterRegistry;
-import tech.jhipster.config.JHipsterProperties;
 
 class JWTFilterTest {
 
@@ -37,7 +37,7 @@ class JWTFilterTest {
 
     @BeforeEach
     void setup() {
-        JHipsterProperties jHipsterProperties = new JHipsterProperties();
+        ArtemisProperties jHipsterProperties = new ArtemisProperties();
         String base64Secret = "fd54a45s65fds737b9aafcb3412e07ed99b267f33413274720ddbb7f6c5e64e9f14075f2d7ed041592f0b7657baf8";
         jHipsterProperties.getSecurity().getAuthentication().getJwt().setBase64Secret(base64Secret);
 
@@ -56,7 +56,7 @@ class JWTFilterTest {
     @Test
     void testJWTFilterCookie() throws Exception {
         UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken("test-user", "test-password",
-                Collections.singletonList(new SimpleGrantedAuthority(Role.STUDENT.getAuthority())));
+                List.of(new SimpleGrantedAuthority(Role.STUDENT.getAuthority())));
         String jwt = tokenProvider.createToken(authentication, false);
         MockHttpServletRequest request = new MockHttpServletRequest();
         request.setCookies(new Cookie(Constants.JWT_COOKIE_NAME, jwt));
@@ -71,7 +71,7 @@ class JWTFilterTest {
     @Test
     void testJWTFilterCookieAndBearer() throws Exception {
         UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken("test-user", "test-password",
-                Collections.singletonList(new SimpleGrantedAuthority(Role.STUDENT.getAuthority())));
+                List.of(new SimpleGrantedAuthority(Role.STUDENT.getAuthority())));
 
         String jwt = tokenProvider.createToken(authentication, false);
         MockHttpServletRequest request = new MockHttpServletRequest();
@@ -88,7 +88,7 @@ class JWTFilterTest {
     @Test
     void testJWTFilterBearer() throws Exception {
         UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken("test-user", "test-password",
-                Collections.singletonList(new SimpleGrantedAuthority(Role.STUDENT.getAuthority())));
+                List.of(new SimpleGrantedAuthority(Role.STUDENT.getAuthority())));
 
         String jwt = tokenProvider.createToken(authentication, false);
         MockHttpServletRequest request = new MockHttpServletRequest();
@@ -129,7 +129,7 @@ class JWTFilterTest {
     @Test
     void testJWTFilterWrongCookieName() throws Exception {
         UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken("test-user", "test-password",
-                Collections.singletonList(new SimpleGrantedAuthority(Role.STUDENT.getAuthority())));
+                List.of(new SimpleGrantedAuthority(Role.STUDENT.getAuthority())));
         String jwt = tokenProvider.createToken(authentication, false);
         MockHttpServletRequest request = new MockHttpServletRequest();
         request.setCookies(new Cookie("wrong_jwt", jwt));
